--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v3
       
     - name: Say Hello
-      run: echo "Hello, GitHub Actions! This is my first workflow!"
+      run: echo "Hello, GitHub Actions! This AI-game-NAA-dragon workflow!"
       
     - name: Show date
       run: date
