--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,9 @@
         "es2021": true,
         "node": true
     },
+    "extends": [
+        "eslint:recommended"
+    ],
     "extends": "eslint:recommended",
     "parserOptions": {
         "ecmaVersion": 12
