--- a/.gitignore
+++ b/.gitignore
@@ -5,21 +5,42 @@ __pycache__/
 *.pyo
 *.pyd
 .Python
+env/
 venv/
 .venv/
+.ENV
+.ENV.local
 .env
 .env.local
-*.env.*
+.env.*
+.python-version
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.pytest_cache/
+.mypy_cache/
+.hypothesis/
 
 # Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnp.cjs
+.pnp.loader.mjs
 
 # Build outputs
 dist/
 build/
+*.min.js
+*.min.css
 target/
 
 # IDE
@@ -27,27 +48,16 @@ target/
 .idea/
 *.swp
 *.swo
-
-# Logs
-*.log
-
-# Coverage
-.coverage
-coverage/
-htmlcov/
+*~
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Compressed
-*.zip
-*.gz
-*.tar
-*.tgz
-*.bz2
-*.xz
-*.7z
-*.rar
-*.zst
+# Logs
+*.log
+
+# Coverage
+coverage/
+htmlcov/
 ```
