--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "ai-game-naa-dragon",
   "version": "1.0.0",
-  "description": "CI/CD project for AI-game-NAA-dragon",
+  "description": "A mathematical operations library with CI/CD integration",
   "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "node test.js",
+    "test:py": "python test.py",
     "start": "node app.js",
     "lint": "eslint .",
     "security-audit": "npm audit"
   },
-  "keywords": [
-    "cicd",
-    "devops",
-    "github-actions",
-    "gitlab-ci"
-  ],
-  "author": "AI-game-naa-dragon Project",
+  "keywords": ["math", "ci/cd", "testing"],
+  "author": "Sergey Sukhinin",
   "license": "MIT",
   "devDependencies": {
     "eslint": "^8.0.0"
